--- a/papers/eurosys24-song-blaze.bib
+++ b/papers/eurosys24-song-blaze.bib
@@ -9,6 +9,6 @@ url = {https://doi.org/10.1145/3627703.3629558},
 doi = {10.1145/3627703.3629558}, 
 booktitle = {Proceedings of the Nineteenth European Conference on Computer Systems}, 
 numpages = {17}, 
-location = {Belgrade, Serbia}, 
+location = {Athens, Greece}, 
 series = {EuroSys '24} 
 }
